--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  intl: ^0.19.0
+  intl: ^0.20.2
   http: ^1.4.0
   google_fonts: ^6.2.1
   flutter_screenutil: ^5.9.3
@@ -28,6 +28,14 @@ dependencies:
   animated_flip_counter: ^0.3.4
   geolocator: ^13.0.4
   just_the_tooltip: ^0.0.12
+  smooth_page_indicator: ^1.2.1
+  igot_ui_components: ^0.1.0
+  dropdown_button2: ^2.3.9
+  circular_countdown_timer: ^0.2.3
+
+
+
+
 
 
 
